--- a/css/default.css
+++ b/css/default.css
@@ -1155,8 +1155,9 @@ mark,
     margin-left: 91.666667%;
   }
 }
+/* 19 */
 
-.col-form-label {
+/* .col-form-label {
   padding-top: calc(0.375rem + 1px);
   padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
@@ -1176,9 +1177,9 @@ mark,
   padding-bottom: calc(0.25rem + 1px);
   font-size: 0.875rem;
   line-height: 1.5;
-}
+} */
 
-.form-control-plaintext {
+/* .form-control-plaintext {
   display: block;
   width: 100%;
   padding-top: 0.375rem;
@@ -1189,9 +1190,9 @@ mark,
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
-}
+} */
 
-.form-control-plaintext.form-control-sm, .form-control-plaintext.form-control-lg {
+/* .form-control-plaintext.form-control-sm, .form-control-plaintext.form-control-lg {
   padding-right: 0;
   padding-left: 0;
 }
@@ -1202,9 +1203,9 @@ mark,
   font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem;
-}
+} */
 
-.form-control-lg {
+/* .form-control-lg {
   height: calc(1.5em + 1rem + 2px);
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
@@ -1218,16 +1219,18 @@ select.form-control[size], select.form-control[multiple] {
 
 textarea.form-control {
   height: auto;
-}
+} */
 
-.valid-feedback {
+/* 19 */
+
+/* .valid-feedback {
   display: none;
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
   color: #28a745;
-}
-
+} */
+/*
 .valid-tooltip {
   position: absolute;
   top: 100%;
@@ -1341,17 +1344,17 @@ textarea.form-control {
 .was-validated .custom-file-input:valid:focus ~ .custom-file-label, .custom-file-input.is-valid:focus ~ .custom-file-label {
   border-color: #28a745;
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
-}
+} */
 
-.invalid-feedback {
+/* .invalid-feedback {
   display: none;
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
   color: #dc3545;
-}
+} */
 
-.invalid-tooltip {
+/* .invalid-tooltip {
   position: absolute;
   top: 100%;
   z-index: 5;
@@ -1364,9 +1367,10 @@ textarea.form-control {
   color: #fff;
   background-color: rgba(220, 53, 69, 0.9);
   border-radius: 0.25rem;
-}
+} */
 
-.was-validated .form-control:invalid, .form-control.is-invalid {
+/* 19 */
+/* .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: #dc3545;
   padding-right: calc(1.5em + 0.75rem);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
@@ -1464,186 +1468,6 @@ textarea.form-control {
 .was-validated .custom-file-input:invalid:focus ~ .custom-file-label, .custom-file-input.is-invalid:focus ~ .custom-file-label {
   border-color: #dc3545;
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
-}
-
-/* 18 */
-/* .btn {
-  display: inline-block;
-  font-weight: 400;
-  color: #212529;
-  text-align: center;
-  vertical-align: middle;
-  user-select: none;
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-} */
-
-/* @media (prefers-reduced-motion: reduce) {
-  .btn {
-    transition: none;
-  }
-}
-
-.btn:hover {
-  color: #212529;
-  text-decoration: none;
-}
-
-.btn:focus, .btn.focus {
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-} */
-
-/* .btn.disabled, .btn:disabled {
-  opacity: 0.65;
-} */
-/*
-a.btn.disabled,
-fieldset:disabled a.btn {
-  pointer-events: none;
-} */
-
-/* 18 */
-/* .btn-primary {
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
-}
-
-.btn-primary:hover {
-  color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
-}
-
-.btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-} */
-
-/* .btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
-}
-
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #0062cc;
-  border-color: #005cbf;
-} */
-
-/* .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-} */
-
-/* .btn-secondary {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
-}
-
-.btn-secondary:hover {
-  color: #fff;
-  background-color: #5a6268;
-  border-color: #545b62;
-}
-
-.btn-secondary:focus, .btn-secondary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
-}
-
-.btn-secondary.disabled, .btn-secondary:disabled {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
-}
-
-.btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
-.show > .btn-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #545b62;
-  border-color: #4e555b;
-} */
-
-/* .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
-} */
-
-/* 18 */
-/* .btn-success {
-  color: #fff;
-  background-color: #28a745;
-  border-color: #28a745;
-}
-
-.btn-success:hover {
-  color: #fff;
-  background-color: #218838;
-  border-color: #1e7e34;
-} */
-
-/* .btn-success:focus, .btn-success.focus {
-  box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
-}
-
-.btn-success.disabled, .btn-success:disabled {
-  color: #fff;
-  background-color: #28a745;
-  border-color: #28a745;
-}
-
-.btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
-.show > .btn-success.dropdown-toggle {
-  color: #fff;
-  background-color: #1e7e34;
-  border-color: #1c7430;
-} */
-
-/* .btn-success:not(:disabled):not(.disabled):active:focus, .btn-success:not(:disabled):not(.disabled).active:focus,
-.show > .btn-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
-} */
-
-/* .btn-info {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
-}
-
-.btn-info:hover {
-  color: #fff;
-  background-color: #138496;
-  border-color: #117a8b;
-}
-
-.btn-info:focus, .btn-info.focus {
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
-} */
-
-/* .btn-info.disabled, .btn-info:disabled {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
-}
-
-.btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
-.show > .btn-info.dropdown-toggle {
-  color: #fff;
-  background-color: #117a8b;
-  border-color: #10707f;
-} */
-
-/* .btn-info:not(:disabled):not(.disabled):active:focus, .btn-info:not(:disabled):not(.disabled).active:focus,
-.show > .btn-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
 } */
 
 .fade {
@@ -1926,14 +1750,15 @@ header {
   }
 }
 
-.pagination {
+/* 19 */
+/* .pagination {
   display: flex;
   padding-left: 0;
   list-style: none;
   border-radius: 0.25rem;
-}
+} */
 
-.page-link {
+/* .page-link {
   position: relative;
   display: block;
   padding: 0.5rem 0.75rem;
@@ -1942,23 +1767,25 @@ header {
   color: #007bff;
   background-color: #fff;
   border: 1px solid #dee2e6;
-}
-
+} */
+/*
 .page-link:hover {
   z-index: 2;
   color: #0056b3;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
-}
-
+} */
+/*
 .page-link:focus {
   z-index: 2;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
+} */
 
-.page-item:first-child .page-link {
+/* 19 */
+
+/* .page-item:first-child .page-link {
   margin-left: 0;
   border-top-left-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1982,9 +1809,11 @@ header {
   cursor: auto;
   background-color: #fff;
   border-color: #dee2e6;
-}
+} */
 
-.pagination-lg .page-link {
+/* 19 */
+
+/* .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
   font-size: 1.25rem;
   line-height: 1.5;
@@ -2014,9 +1843,10 @@ header {
 .pagination-sm .page-item:last-child .page-link {
   border-top-right-radius: 0.2rem;
   border-bottom-right-radius: 0.2rem;
-}
+} */
 
-.badge {
+/* 19 */
+/* .badge {
   display: inline-block;
   padding: 0.25em 0.4em;
   font-size: 75%;
@@ -2033,9 +1863,9 @@ header {
   .badge {
     transition: none;
   }
-}
+} */
 
-a.badge:hover, a.badge:focus {
+/* a.badge:hover, a.badge:focus {
   text-decoration: none;
 }
 
@@ -2046,9 +1876,9 @@ a.badge:hover, a.badge:focus {
 .btn .badge {
   position: relative;
   top: -1px;
-}
+} */
 
-.badge-pill {
+/* .badge-pill {
   padding-right: 0.6em;
   padding-left: 0.6em;
   border-radius: 10rem;
@@ -2117,8 +1947,8 @@ a.badge-info:focus, a.badge-info.focus {
 .badge-warning {
   color: #212529;
   background-color: #ffc107;
-}
-
+} */
+/*
 a.badge-warning:hover, a.badge-warning:focus {
   color: #212529;
   background-color: #d39e00;
@@ -2137,9 +1967,9 @@ a.badge-warning:focus, a.badge-warning.focus {
 a.badge-danger:hover, a.badge-danger:focus {
   color: #fff;
   background-color: #bd2130;
-}
+} */
 
-a.badge-danger:focus, a.badge-danger.focus {
+/* a.badge-danger:focus, a.badge-danger.focus {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
 }
@@ -2152,9 +1982,9 @@ a.badge-danger:focus, a.badge-danger.focus {
 a.badge-light:hover, a.badge-light:focus {
   color: #212529;
   background-color: #dae0e5;
-}
+} */
 
-a.badge-light:focus, a.badge-light.focus {
+/* a.badge-light:focus, a.badge-light.focus {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
 }
@@ -2167,12 +1997,12 @@ a.badge-light:focus, a.badge-light.focus {
 a.badge-dark:hover, a.badge-dark:focus {
   color: #fff;
   background-color: #1d2124;
-}
+} */
 
-a.badge-dark:focus, a.badge-dark.focus {
+/* a.badge-dark:focus, a.badge-dark.focus {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
-}
+} */
 
 .media {
   display: flex;
@@ -2182,7 +2012,6 @@ a.badge-dark:focus, a.badge-dark.focus {
 .media-body {
   flex: 1;
 }
-
 
 .close {
   float: right;
