--- a/js/owl-carousel/owl.carousel.css
+++ b/js/owl-carousel/owl.carousel.css
@@ -4,16 +4,16 @@
  */
 
 /* clearfix */
-.owl-carousel .owl-wrapper:after {
+/* .owl-carousel .owl-wrapper:after {
 	content: ".";
 	display: block;
 	clear: both;
 	visibility: hidden;
 	line-height: 0;
 	height: 0;
-}
+} */
 /* display none until init */
-.owl-carousel{
+/* .owl-carousel{
 	display: none;
 	position: relative;
 	width: 100%;
@@ -51,15 +51,15 @@
 	-ms-user-select: none;
 	user-select: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
+} */
 
 /* mouse grab icon */
-.grabbing {
+/* .grabbing {
     cursor:url(grabbing.png) 8 8, move;
-}
+} */
 
 /* fix */
-.owl-carousel  .owl-wrapper,
+/* .owl-carousel  .owl-wrapper,
 .owl-carousel  .owl-item{
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility:    hidden;
@@ -67,4 +67,4 @@
   -webkit-transform: translate3d(0,0,0);
   -moz-transform: translate3d(0,0,0);
   -ms-transform: translate3d(0,0,0);
-}
+} */
