--- a/js/owl-carousel/owl.transitions.css
+++ b/js/owl-carousel/owl.transitions.css
@@ -1,9 +1,9 @@
-/* 
- *  Owl Carousel CSS3 Transitions 
+/*
+ *  Owl Carousel CSS3 Transitions
  *  v1.3.2
  */
 
-.owl-origin {
+/* .owl-origin {
 	-webkit-perspective: 1200px;
 	-webkit-perspective-origin-x : 50%;
 	-webkit-perspective-origin-y : 50%;
@@ -11,9 +11,9 @@
 	-moz-perspective-origin-x : 50%;
 	-moz-perspective-origin-y : 50%;
 	perspective : 1200px;
-}
+} */
 /* fade */
-.owl-fade-out {
+/* .owl-fade-out {
   z-index: 10;
   -webkit-animation: fadeOut .7s both ease;
   -moz-animation: fadeOut .7s both ease;
@@ -23,9 +23,9 @@
   -webkit-animation: fadeIn .7s both ease;
   -moz-animation: fadeIn .7s both ease;
   animation: fadeIn .7s both ease;
-}
+} */
 /* backSlide */
-.owl-backSlide-out {
+/* .owl-backSlide-out {
   -webkit-animation: backSlideOut 1s both ease;
   -moz-animation: backSlideOut 1s both ease;
   animation: backSlideOut 1s both ease;
@@ -34,9 +34,9 @@
   -webkit-animation: backSlideIn 1s both ease;
   -moz-animation: backSlideIn 1s both ease;
   animation: backSlideIn 1s both ease;
-}
+} */
 /* goDown */
-.owl-goDown-out {
+/* .owl-goDown-out {
   -webkit-animation: scaleToFade .7s ease both;
   -moz-animation: scaleToFade .7s ease both;
   animation: scaleToFade .7s ease both;
@@ -45,9 +45,9 @@
   -webkit-animation: goDown .6s ease both;
   -moz-animation: goDown .6s ease both;
   animation: goDown .6s ease both;
-}
+} */
 /* scaleUp */
-.owl-fadeUp-in {
+/* .owl-fadeUp-in {
   -webkit-animation: scaleUpFrom .5s ease both;
   -moz-animation: scaleUpFrom .5s ease both;
   animation: scaleUpFrom .5s ease both;
@@ -57,10 +57,10 @@
   -webkit-animation: scaleUpTo .5s ease both;
   -moz-animation: scaleUpTo .5s ease both;
   animation: scaleUpTo .5s ease both;
-}
+} */
 /* Keyframes */
 /*empty*/
-@-webkit-keyframes empty {
+/* @-webkit-keyframes empty {
   0% {opacity: 1}
 }
 @-moz-keyframes empty {
@@ -160,4 +160,4 @@
 }
 @keyframes scaleUpTo {
   to { opacity: 0; transform: scale(1.5); }
-}
+} */
